--- a/contacto.html
+++ b/contacto.html
@@ -106,9 +106,10 @@
     </section>
     <footer>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="catalogo.html">Productos</a>
-        </nav>
+        <a href="index.html">Inicio</a>
+        <a href="catalogo.html">Productos</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
     </footer>
 </body>
 </html>
