--- a/catalago.html
+++ b/catalago.html
@@ -88,9 +88,10 @@
     </section>
     <footer>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+        <a href="index.html">Inicio</a>
+        <a href="catalogo.html">Productos</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
     </footer>
 
     <script>
