--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
     
     <footer>
         <nav>
-            <a href="catalogo.html">Productos</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+        <a href="index.html">Inicio</a>
+        <a href="catalogo.html">Productos</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
     </footer>
 </body>
 </html>
