--- a/index.html
+++ b/index.html
@@ -112,3 +112,6 @@
             <a href="catalogo.html">Productos</a> <!-- Asegúrate de que este enlace apunte a la página correcta -->
             <a href="contacto.html">Contacto</a>
         </nav>
+</footer>
+</body>
+</html>
