--- a/index.html
+++ b/index.html
@@ -105,4 +105,18 @@
         </div>
         <h1>Bienvenidos a Canelles</h1>
         <p>Ser la marca líder en la producción y venta de churros de yuca, reconocida por la calidad de nuestros productos y por fomentar una alimentación saludable y deliciosa, que resalte los sabores tradicionales de nuestra cultura.</p>
-        <p>Ofrecer a nuestros clientes una experiencia gastronómica única a través de churros de yuca frescos, elaborados con ingredientes naturales y
+        <p>Ofrecer a nuestros clientes una experiencia gastronómica única a través de churros de yuca frescos, elaborados con ingredientes naturales y locales. Buscamos innovar en el mercado de postres, brindando opciones deliciosas que sean aptas para diferentes dietas, mientras apoyamos a los productores locales.</p>
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="equipo">
+        <h2>Conoce a Nuestro Equipo</h2>
+        <img src="equipo.jpg" alt="Nuestro Equipo">
+    </
